--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/04_machine_translation_sequence_to_sequence_learning.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/04_machine_translation_sequence_to_sequence_learning.ipynb
@@ -6,7 +6,7 @@
       "name": "04-machine-translation--sequence-to-sequence-learning.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMcquHEW+sGQgci3OzPzESZ",
+      "authorship_tag": "ABX9TyMHA58JCUmv8yQjhwqX2O8E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,7 +184,7 @@
       ],
       "metadata": {
         "id": "ts-AXBMzrEeq",
-        "outputId": "0bc215d2-cefa-42f5-9704-69dc58442dcd",
+        "outputId": "6b8299e4-f173-4c87-8f29-e79fe85a163c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -195,7 +195,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('I feel more comfortable behind the wheel.', '[start]Me siento más cómodo conduciendo.[end]')\n"
+            "('Is there something that you want?', '[start]¿Hay algo que quieras?[end]')\n"
           ]
         }
       ]
@@ -207,7 +207,7 @@
       ],
       "metadata": {
         "id": "ZKHJ29-JrVaI",
-        "outputId": "2c079997-2ba8-4571-94df-1614dc19656b",
+        "outputId": "ece8d731-90ca-4b11-8e35-99e9a263ad04",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -218,7 +218,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('He lives across the street from us.', '[start]Vive al otro lado de nuestra calle.[end]')\n"
+            "('Mary was arrested for shoplifting.', '[start]Mary fue arrestada por ratera.[end]')\n"
           ]
         }
       ]
@@ -379,7 +379,7 @@
       ],
       "metadata": {
         "id": "TkPwTeeH0Gnu",
-        "outputId": "0a698f06-7545-4ef6-e84f-4a527615c890",
+        "outputId": "fcaf0c71-bcd5-4bb3-93a9-55870e6d6c49",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -552,7 +552,7 @@
       ],
       "metadata": {
         "id": "XxMp-usaB2WW",
-        "outputId": "44dcfedb-93b6-45de-eb90-7f6fe7c95324",
+        "outputId": "82f5133b-41de-44ae-e6ee-5e6b9d4cf0d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -564,42 +564,42 @@
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "1302/1302 [==============================] - 129s 89ms/step - loss: 1.4788 - accuracy: 0.3245 - val_loss: 1.2061 - val_accuracy: 0.4267\n",
+            "1302/1302 [==============================] - 132s 91ms/step - loss: 1.4797 - accuracy: 0.3238 - val_loss: 1.2083 - val_accuracy: 0.4242\n",
             "Epoch 2/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 1.2140 - accuracy: 0.4477 - val_loss: 1.0664 - val_accuracy: 0.4965\n",
+            "1302/1302 [==============================] - 115s 88ms/step - loss: 1.2150 - accuracy: 0.4467 - val_loss: 1.0688 - val_accuracy: 0.4953\n",
             "Epoch 3/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 1.0930 - accuracy: 0.5039 - val_loss: 0.9931 - val_accuracy: 0.5337\n",
+            "1302/1302 [==============================] - 121s 93ms/step - loss: 1.0937 - accuracy: 0.5035 - val_loss: 0.9998 - val_accuracy: 0.5309\n",
             "Epoch 4/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 1.0115 - accuracy: 0.5398 - val_loss: 0.9639 - val_accuracy: 0.5540\n",
+            "1302/1302 [==============================] - 115s 89ms/step - loss: 1.0118 - accuracy: 0.5391 - val_loss: 0.9691 - val_accuracy: 0.5504\n",
             "Epoch 5/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.9690 - accuracy: 0.5660 - val_loss: 0.9531 - val_accuracy: 0.5631\n",
+            "1302/1302 [==============================] - 117s 90ms/step - loss: 0.9689 - accuracy: 0.5658 - val_loss: 0.9580 - val_accuracy: 0.5601\n",
             "Epoch 6/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.9426 - accuracy: 0.5881 - val_loss: 0.9505 - val_accuracy: 0.5697\n",
+            "1302/1302 [==============================] - 121s 93ms/step - loss: 0.9418 - accuracy: 0.5889 - val_loss: 0.9576 - val_accuracy: 0.5663\n",
             "Epoch 7/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.9256 - accuracy: 0.6049 - val_loss: 0.9529 - val_accuracy: 0.5731\n",
+            "1302/1302 [==============================] - 123s 94ms/step - loss: 0.9254 - accuracy: 0.6050 - val_loss: 0.9611 - val_accuracy: 0.5696\n",
             "Epoch 8/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.9143 - accuracy: 0.6165 - val_loss: 0.9565 - val_accuracy: 0.5742\n",
+            "1302/1302 [==============================] - 122s 94ms/step - loss: 0.9133 - accuracy: 0.6179 - val_loss: 0.9655 - val_accuracy: 0.5706\n",
             "Epoch 9/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.9060 - accuracy: 0.6266 - val_loss: 0.9619 - val_accuracy: 0.5749\n",
+            "1302/1302 [==============================] - 118s 91ms/step - loss: 0.9049 - accuracy: 0.6275 - val_loss: 0.9687 - val_accuracy: 0.5731\n",
             "Epoch 10/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.9000 - accuracy: 0.6337 - val_loss: 0.9641 - val_accuracy: 0.5785\n",
+            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8990 - accuracy: 0.6346 - val_loss: 0.9723 - val_accuracy: 0.5741\n",
             "Epoch 11/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8962 - accuracy: 0.6388 - val_loss: 0.9671 - val_accuracy: 0.5781\n",
+            "1302/1302 [==============================] - 116s 89ms/step - loss: 0.8948 - accuracy: 0.6397 - val_loss: 0.9763 - val_accuracy: 0.5748\n",
             "Epoch 12/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8919 - accuracy: 0.6429 - val_loss: 0.9731 - val_accuracy: 0.5770\n",
+            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8915 - accuracy: 0.6437 - val_loss: 0.9810 - val_accuracy: 0.5734\n",
             "Epoch 13/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8907 - accuracy: 0.6454 - val_loss: 0.9752 - val_accuracy: 0.5774\n",
+            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8899 - accuracy: 0.6462 - val_loss: 0.9836 - val_accuracy: 0.5744\n",
             "Epoch 14/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8894 - accuracy: 0.6470 - val_loss: 0.9790 - val_accuracy: 0.5779\n",
+            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8885 - accuracy: 0.6480 - val_loss: 0.9847 - val_accuracy: 0.5745\n",
             "Epoch 15/15\n",
-            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8887 - accuracy: 0.6487 - val_loss: 0.9801 - val_accuracy: 0.5771\n"
+            "1302/1302 [==============================] - 115s 88ms/step - loss: 0.8881 - accuracy: 0.6491 - val_loss: 0.9870 - val_accuracy: 0.5750\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f80220e93d0>"
+              "<keras.callbacks.History at 0x7fb4cd5975d0>"
             ]
           },
           "metadata": {},
@@ -635,13 +635,177 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Prepare a dict to convert token index predictions to string tokens\n",
+        "spa_vocab = target_vectorization.get_vocabulary()\n",
+        "spa_index_lookup = dict(zip(range(len(spa_vocab)), spa_vocab))\n",
+        "max_decoded_sentence_length = 20\n",
+        "\n",
+        "def decode_sequence(input_sentence):\n",
+        "  tokenized_input_sentence = source_vectorization([input_sentence])\n",
+        "  # seed token\n",
+        "  decoded_sentence = \"[start]\"\n",
+        "  for i in range(max_decoded_sentence_length):\n",
+        "    tokenized_target_sentence = target_vectorization([decoded_sentence])\n",
+        "    # sample the next token\n",
+        "    next_token_predictions = seq2seq_rnn.predict([tokenized_input_sentence, tokenized_target_sentence])\n",
+        "    sampled_token_index = np.argmax(next_token_predictions[0, i, :])\n",
+        "    # Convert the next token prediction to a string and append it to the generated sentence.\n",
+        "    sampled_token = spa_index_lookup[sampled_token_index]\n",
+        "    decoded_sentence += \" \" + sampled_token\n",
+        "\n",
+        "    # Exit condition: either hit max length or sample a stop character\n",
+        "    if sampled_token == \"[end]\":\n",
+        "      break\n",
+        "  return decoded_sentence"
       ],
       "metadata": {
         "id": "GP4YWv07DkXJ"
       },
-      "execution_count": 15,
+      "execution_count": 20,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_eng_texts = [pair[0] for pair in test_pairs]\n",
+        "for _ in range(20):\n",
+        "  input_sentence = random.choice(test_eng_texts)\n",
+        "  print(\"-\")\n",
+        "  print(input_sentence)\n",
+        "  print(decode_sequence(input_sentence))"
+      ],
+      "metadata": {
+        "id": "M-zD2DzwDyhs",
+        "outputId": "a0143ba0-1d86-48bf-daec-ad765cd0fa4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-\n",
+            "How big you are!\n",
+            "[start]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "Why don't you leave, Tom?\n",
+            "[start] no te por tom[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "Tom wants to stay here.\n",
+            "[start] tom quiere aquí[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "We love you.\n",
+            "[start]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "There were a lot of boats on the lake.\n",
+            "[start] muchos en el mary del error[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "Let's play tennis in the afternoon.\n",
+            "[start] al tenis por la tarde[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "This is the worst of all.\n",
+            "[start] es el mejor de la para nada[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "I'll be in trouble if the story gets out.\n",
+            "[start] en problemas si la historia se [UNK]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "I jumped up and down.\n",
+            "[start] y [UNK]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "I need you here in case something else happens.\n",
+            "[start] que estás aquí en otra [UNK]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "Tom winked.\n",
+            "[start] un [UNK]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "She sent her children off to school.\n",
+            "[start] a sus niños a la escuela[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "Here's some water.\n",
+            "[start] algo de agua[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "That short woman over there is my mother.\n",
+            "[start] de allí es [UNK] de mi madre[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "My father has lived in Nagoya for 30 years.\n",
+            "[start] ha padre ha [UNK] en hace tres años[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "Tom's response was immediate.\n",
+            "[start] la fue de tom fue de gran no al muy [UNK]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "When does the performance begin?\n",
+            "[start] la [UNK]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "We're out of time.\n",
+            "[start] de tiempo[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "We went to the beach.\n",
+            "[start] a la playa[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n",
+            "-\n",
+            "I wrote a letter last night.\n",
+            "[start] una carta anoche[end]  [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK] [UNK]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note that this inference setup, while very simple, is rather inefficient, since we reprocess\n",
+        "the entire source sentence and the entire generated target sentence every time\n",
+        "we sample a new word.\n",
+        "\n",
+        "In a practical application, you’d factor the encoder and the\n",
+        "decoder as two separate models, and your decoder would only run a single step at\n",
+        "each token-sampling iteration, reusing its previous internal state.\n",
+        "\n",
+        "There are many ways this toy model could be improved: \n",
+        "\n",
+        "* We could use a deep stack of\n",
+        "recurrent layers for both the encoder and the decoder (note that for the decoder, this makes state management a bit more involved). \n",
+        "* We could use an LSTM instead of a GRU. And so on. \n",
+        "\n",
+        "Beyond such tweaks, however, the RNN approach to sequence-to-sequence\n",
+        "learning has a few fundamental limitations:\n",
+        "\n",
+        "* The source sequence representation has to be held entirely in the encoder state\n",
+        "vector(s), which puts significant limitations on the size and complexity of the\n",
+        "sentences you can translate. It’s a bit as if a human were translating a sentence\n",
+        "entirely from memory, without looking twice at the source sentence while producing\n",
+        "the translation.\n",
+        "\n",
+        "* RNNs have trouble dealing with very long sequences, since they tend to progressively\n",
+        "forget about the past—by the time you’ve reached the 100th token in\n",
+        "either sequence, little information remains about the start of the sequence.That means RNN-based models can’t hold onto long-term context, which can\n",
+        "be essential for translating long documents.\n",
+        "\n",
+        "These limitations are what has led the machine learning community to embrace the\n",
+        "Transformer architecture for sequence-to-sequence problems."
+      ],
+      "metadata": {
+        "id": "508No_6uEMBL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Sequence-to-sequence learning with Transformer"
+      ],
+      "metadata": {
+        "id": "EGRK2tdiFJWZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4XZJdFnQFLUg"
+      }
     }
   ]
 }
