--- a/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/04_machine_translation_sequence_to_sequence_learning.ipynb
+++ b/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/04_machine_translation_sequence_to_sequence_learning.ipynb
@@ -6,7 +6,7 @@
       "name": "04-machine-translation--sequence-to-sequence-learning.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMHA58JCUmv8yQjhwqX2O8E",
+      "authorship_tag": "ABX9TyMcmROuCB3dQ6ld66hwMCpO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,10 +122,32 @@
         "!unzip -q spa-eng.zip"
       ],
       "metadata": {
-        "id": "MjRO78CmnnH7"
+        "id": "MjRO78CmnnH7",
+        "outputId": "9ec10cc6-dbeb-4ad4-8522-4a552c61d0b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-02-01 04:24:24--  http://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.251.6.128, 74.125.126.128, 74.125.132.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.251.6.128|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 2638744 (2.5M) [application/zip]\n",
+            "Saving to: ‘spa-eng.zip’\n",
+            "\n",
+            "\rspa-eng.zip           0%[                    ]       0  --.-KB/s               \rspa-eng.zip         100%[===================>]   2.52M  --.-KB/s    in 0.02s   \n",
+            "\n",
+            "2022-02-01 04:24:24 (149 MB/s) - ‘spa-eng.zip’ saved [2638744/2638744]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -189,7 +211,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +269,7 @@
       "metadata": {
         "id": "_xCJvrN7rT0k"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -293,7 +315,7 @@
       "metadata": {
         "id": "Wh7IlyfVuNSl"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -326,7 +348,7 @@
       "metadata": {
         "id": "lRd8xb_uw68P"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -345,7 +367,7 @@
       "metadata": {
         "id": "mQNGKIVKzAF7"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -357,7 +379,7 @@
       "metadata": {
         "id": "FatVJpipzx8c"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -379,12 +401,12 @@
       ],
       "metadata": {
         "id": "TkPwTeeH0Gnu",
-        "outputId": "fcaf0c71-bcd5-4bb3-93a9-55870e6d6c49",
+        "outputId": "225beb8a-0d40-4f10-d47c-b9753b00378d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +497,7 @@
       "metadata": {
         "id": "kfQrePqY6SEx"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +512,7 @@
       "metadata": {
         "id": "RYOcpMqK4Fpj"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -524,7 +546,7 @@
       "metadata": {
         "id": "kaP45JT8-bFT"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +579,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +683,7 @@
       "metadata": {
         "id": "GP4YWv07DkXJ"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -681,7 +703,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,11 +823,88 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Sequence-to-sequence learning is the task where Transformer really shines. Neural\n",
+        "attention enables Transformer models to successfully process sequences that are con\n",
+        "siderably\n",
+        "longer and more complex than those RNNs can handle.\n",
+        "\n",
+        "Look at the decoder\n",
+        "internals: you’ll recognize that it looks very similar to the Transformer encoder, except\n",
+        "that an extra attention block is inserted between the self-attention block applied to\n",
+        "the target sequence and the dense layers of the exit block.\n",
+        "\n",
+        "<img src='https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-python-by-francois-chollet/11-deep-learning-for-text/images/5.png?raw=1' width='600'/>\n",
+        "\n",
+        "\n",
+        "Let’s implement it. Like for the TransformerEncoder, we’ll use a Layer subclass."
       ],
       "metadata": {
         "id": "4XZJdFnQFLUg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class TransformerDecoder(layers.Layer):\n",
+        "\n",
+        "  def __init__(self, embed_dim, dense_dim, num_heads, **kwargs):\n",
+        "      super().__init__(**kwargs)\n",
+        "\n",
+        "      self.embed_dim = embed_dim\n",
+        "      self.dense_dim = dense_dim\n",
+        "      self.num_heads = num_heads\n",
+        "\n",
+        "      self.multi_head_attention_layer_1 = layers.MultiHeadAttention(num_heads=num_heads, key_dim=embed_dim)\n",
+        "      self.multi_head_attention_layer_2 = layers.MultiHeadAttention(num_heads=num_heads, key_dim=embed_dim)\n",
+        "      \n",
+        "      self.dense_projection = keras.Sequential([\n",
+        "           layers.Dense(dense_dim, activation=\"relu\"),\n",
+        "           layers.Dense(embed_dim)                                     \n",
+        "      ])\n",
+        "\n",
+        "      self.layernorm_1 = layers.LayerNormalization()\n",
+        "      self.layernorm_2 = layers.LayerNormalization()\n",
+        "      self.layernorm_3 = layers.LayerNormalization()\n",
+        "\n",
+        "      # This attribute ensures that the layer will propagate its input mask to its outputs\n",
+        "      self.supports_masking = True\n",
+        "\n",
+        "  def get_config(self):\n",
+        "      config = super().get_config()\n",
+        "      config.update({\n",
+        "          \"embed_dim\": self.embed_dim,\n",
+        "          \"num_heads\": self.num_heads,\n",
+        "          \"dense_dim\": self.dense_dim\n",
+        "      })\n",
+        "      return config\n",
+        "\n",
+        "  def get_causal_attention_mask(self, inputs):\n",
+        "    \"\"\"\n",
+        "    Causal padding is absolutely critical to successfully training a sequence-to-sequence Transformer.\n",
+        "    we’ll mask the upper half of the pairwise attention matrix to prevent the model from paying any attention \n",
+        "    to information from the future only information from tokens 0...N in the target sequence should be used \n",
+        "    when generating target token N+1.\n",
+        "    \"\"\"\n",
+        "    input_shape = tf.shape(inputs)\n",
+        "    batch_size, sequence_length = input_shape[0], input_shape[1]\n",
+        "    i = tf.range(sequence_length)[:, tf.newaxis]\n",
+        "    j = tf.range(sequence_length)\n",
+        "    # Generate matrix of shape (sequence_length, sequence_length) with 1s in one half and 0s in the other\n",
+        "    mask = tf.cast(i >= j, dtype=\"int32\")\n",
+        "    # Replicate it along the batch axis to get a matrix of shape (batch_size, sequence_length, sequence_length)\n",
+        "    mask = tf.reshape(mask, (1, input_shape[1], input_shape[1]))\n",
+        "    mult = tf.concat([tf.expand_dims(batch_size, -1), tf.constant([1, 1], dtype=tf.int32)], axis=0)\n",
+        "\n",
+        "    return tf.tile(mask, mult)\n",
+        "\n",
+        "  def call(self, inputs, encoder_outputs, mask=None):\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "72mYZvEnihqh"
+      },
+      "execution_count": 12,
+      "outputs": []
     }
   ]
 }
