--- a/inside-deep-learing/04-recurrent-neural-networks/02_simple_sequence_classification.ipynb
+++ b/inside-deep-learing/04-recurrent-neural-networks/02_simple_sequence_classification.ipynb
@@ -6,7 +6,7 @@
       "name": "02-simple-sequence-classification.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNirV4xk9S+6/gNevRZwn8R",
+      "authorship_tag": "ABX9TyPdzXtifw4hWIheimdzr9iL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "bUicuO0T9vRt"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "smI9SLH8uMOd"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
       "metadata": {
         "id": "RVehRr4DtRF3"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -247,12 +247,12 @@
       ],
       "metadata": {
         "id": "UOdEyP4mJxe6",
-        "outputId": "0bf5d033-db71-4e29-8985-ab64cf088a7b",
+        "outputId": "0d7334a6-be80-4125-b0ce-92d9936dc3de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,10 +284,100 @@
       "cell_type": "markdown",
       "source": [
         "Now we have created a dataset, which you may notice is not well balanced: there are far\n",
-        "more Russian names than any other language."
+        "more Russian names than any other language.\n",
+        "\n",
+        "With our data loaded in memory, we can now implement a Dataset to represent it."
       ],
       "metadata": {
         "id": "nP2JzpMcLZKp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LanguageNameDataset(Dataset):\n",
+        "\n",
+        "  def __init__(self, lang_name_dict, vocabulary) -> None:\n",
+        "    self.label_names = [x for x in lang_name_dict.keys()]\n",
+        "    self.data = []\n",
+        "    self.labels = []\n",
+        "    self.vocabulary = vocabulary\n",
+        "    for y, language in enumerate(self.label_names):\n",
+        "      for sample in lang_name_dict[language]:\n",
+        "        self.data.append(sample)\n",
+        "        self.labels.append(y)\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.data)\n",
+        "\n",
+        "  def string2vec(self, input_string):\n",
+        "    \"\"\"\n",
+        "    This method will convert any input string into a vector of long values, according to the vocabulary used by this object. \n",
+        "    input_string: the string to convert to a tensor\n",
+        "    \"\"\"\n",
+        "    # How many characters long is the string?\n",
+        "    T = len(input_string)\n",
+        "    # Create a new tensor to store the result in\n",
+        "    name_vec = torch.zeros((T), dtype=torch.long)\n",
+        "    # iterate through the string and place the appropriate values into the tensor\n",
+        "    for pos, character in enumerate(input_string):\n",
+        "      name_vec[pos] = self.vocabulary[character]\n",
+        "    return name_vec\n",
+        "\n",
+        "  def __getitem__(self, index):\n",
+        "    name = self.data[index]\n",
+        "    label = self.labels[index]\n",
+        "    # Conver the correct class label into a tensor for PyTorch\n",
+        "    label_vec = torch.tensor([label], dtype=torch.long)\n",
+        "    return self.string2vec(name), label"
+      ],
+      "metadata": {
+        "id": "SfNqXgu6aBCI"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's creates a train/test split, with 300 items in the test split."
+      ],
+      "metadata": {
+        "id": "bKWDuYlSjhK3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = LanguageNameDataset(namge_language_data, alphabet)\n",
+        "\n",
+        "train_data, test_data = torch.utils.data.random_split(dataset, (len(dataset) - 300, 300))\n",
+        "\n",
+        "train_loader = DataLoader(train_data, batch_size=1, shuffle=True)\n",
+        "test_loader = DataLoader(test_data, batch_size=1, shuffle=False)"
+      ],
+      "metadata": {
+        "id": "BcztOiuxjjcL"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Embedding layers"
+      ],
+      "metadata": {
+        "id": "hDcHeLL7kOyb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "9vpg9GoKkQZX"
       }
     }
   ]
