--- a/inside-deep-learing/04-recurrent-neural-networks/02_simple_sequence_classification.ipynb
+++ b/inside-deep-learing/04-recurrent-neural-networks/02_simple_sequence_classification.ipynb
@@ -6,7 +6,7 @@
       "name": "02-simple-sequence-classification.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPdzXtifw4hWIheimdzr9iL",
+      "authorship_tag": "ABX9TyOGbzJPGxNq5bzwE91j7ae0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,7 +247,7 @@
       ],
       "metadata": {
         "id": "UOdEyP4mJxe6",
-        "outputId": "0d7334a6-be80-4125-b0ce-92d9936dc3de",
+        "outputId": "84271965-32b8-4194-f453-e416e79f6193",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -374,10 +374,77 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Embedding layers are lookup tables designed to map each integer value to a specific\n",
+        "vector representation. You tell the embedding layer how large the vocabulary is (i.e.,\n",
+        "how many unique items exist) and how large you want the output dimension to be.\n",
+        "\n",
+        "The last thing we need is a way to map each integer to a corresponding vector, which is accomplished using an embedding layer."
       ],
       "metadata": {
         "id": "9vpg9GoKkQZX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  input_sequence = torch.tensor([0, 1, 1, 0, 2], dtype=torch.long)\n",
+        "  embedding = nn.Embedding(3, 2)\n",
+        "  x_seq = embedding(input_sequence)\n",
+        "  print(input_sequence.shape, x_seq.shape)\n",
+        "  print(x_seq)"
+      ],
+      "metadata": {
+        "id": "T521QHpEbUTh",
+        "outputId": "b325e9a4-5a2c-4ea1-dda8-865a3cfbf731",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([5]) torch.Size([5, 2])\n",
+            "tensor([[-1.0839,  2.1440],\n",
+            "        [ 0.6532,  0.7195],\n",
+            "        [ 0.6532,  0.7195],\n",
+            "        [-1.0839,  2.1440],\n",
+            "        [ 1.0832,  1.1107]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note that the first and fourth rows of the matrix have the same values, as do the second and third. \n",
+        "\n",
+        "This is because the order\n",
+        "in the output matches the order in the input."
+      ],
+      "metadata": {
+        "id": "3e-MjTttcfFf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##RNN algorithm"
+      ],
+      "metadata": {
+        "id": "cObn9Rwgc3Ss"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fO-TAed_c6Xn"
       }
     }
   ]
