--- a/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
+++ b/inside-deep-learing/11-seq-2-seq/01_sequence_to_sequence.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP3kMHea76OPgFb1r/sxzTS",
+      "authorship_tag": "ABX9TyPrzDFjsmMxqcl5+3X2g8X2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "_9xoD7-8EibG"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "8U1JNhEmEkzG"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "YTO1Pk4x24PP"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -194,54 +194,136 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Now that we can load the dataset."
+        "# let’s quickly load small English-French dataset\n",
+        "all_data = []\n",
+        "response = urlopen(\"https://download.pytorch.org/tutorial/data.zip\")\n",
+        "zipfile = ZipFile(BytesIO(response.read()))\n",
+        "\n",
+        "for line in zipfile.open(\"data/eng-fra.txt\").readlines():\n",
+        "  line = line.decode(\"utf-8\").lower()   # lower case only please\n",
+        "  line = re.sub(r\"[-.!?]+\", r\" \", line) # no puntuation\n",
+        "  source_lang, target_lang = line.split(\"\\t\")[0: 2]\n",
+        "  all_data.append((source_lang.strip(), target_lang.strip())) # (english, french)"
       ],
       "metadata": {
-        "id": "_D1pqiSk-Bmp"
-      }
+        "id": "_chm5G2Z3Eqs"
+      },
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# let’s quickly load MNIST dataset\n",
-        "mnist_train = torchvision.datasets.MNIST(\"./\", train=True, transform=transforms.ToTensor(), download=True)\n",
-        "mnist_test = torchvision.datasets.MNIST(\"./\", train=False, transform=transforms.ToTensor(), download=True)"
+        "for i in range(10):\n",
+        "  print(all_data[i])"
       ],
       "metadata": {
-        "id": "_chm5G2Z3Eqs"
+        "id": "NymODd7xqoW7",
+        "outputId": "0887efc8-1acc-4be8-9fa5-614b91e5c021",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('go', 'va')\n",
+            "('run', 'cours')\n",
+            "('run', 'courez')\n",
+            "('wow', 'ça alors')\n",
+            "('fire', 'au feu')\n",
+            "('help', \"à l'aide\")\n",
+            "('jump', 'saute')\n",
+            "('stop', 'ça suffit')\n",
+            "('stop', 'stop')\n",
+            "('stop', 'arrête toi')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_data[:10]"
+      ],
+      "metadata": {
+        "id": "e-hdDWUGq9tb",
+        "outputId": "5a315b20-8bf2-420d-c004-ba53ded06736",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('go', 'va'),\n",
+              " ('run', 'cours'),\n",
+              " ('run', 'courez'),\n",
+              " ('wow', 'ça alors'),\n",
+              " ('fire', 'au feu'),\n",
+              " ('help', \"à l'aide\"),\n",
+              " ('jump', 'saute'),\n",
+              " ('stop', 'ça suffit'),\n",
+              " ('stop', 'stop'),\n",
+              " ('stop', 'arrête toi')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To make training faster, let’s limit ourselves to sentences that contain six or fewer words.\n",
+        "short_subset = []\n",
+        "MAX_LEN = 6\n",
+        "\n",
+        "for (s, t) in all_data:\n",
+        "  if max(len(s.split(\" \")), len(t.split(\" \"))) <= MAX_LEN:\n",
+        "    short_subset.append((s, t))\n",
+        "print(f\"Using {len(short_subset)} / {len(all_data)}\")"
+      ],
+      "metadata": {
+        "id": "jtko00QyrbC3",
+        "outputId": "d60471b1-5465-412c-ef4c-8387caf4cc7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using 66251 / 135842\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DG4yIqcWsrU8"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Attention mechanisms are most useful when we have multiple items as inputs into our model.\n",
-        "\n",
-        "Since MNIST is a single digit, we will augment each item in MNIST to become a\n",
-        "bag of digits. We use fully connected layers for this (i.e., flattened MNIST, ignoring the\n",
-        "image nature), so instead of having a batch of digits `(B,D)`, we have `T` digits `(B, T, D)`.\n",
-        "\n",
-        "So why did I call this a bag instead of a sequence? \n",
-        "\n",
-        "Because we don’t care in what order\n",
-        "the digits are presented in the tensor. We just need a tensor large enough to hold everything in the bag.\n",
-        "\n",
-        "Given a bag of digits $x_1, x_2, ... , x_T$ , we have a label y that is equal to the largest digit in the bag. If our bag contains 0, 2, 9, the label for the bag is “9.”\n",
-        "\n",
-        "Let's implements a LargestDigit class to wrap an input dataset and create new items by\n",
-        "randomly filling a bag of toSample items and selecting the maximum label value."
-      ],
-      "metadata": {
-        "id": "vxdmR9er7Jn_"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "class LargestDigit(Dataset):\n",
+        "class TranslationDataset(Dataset):\n",
         "  \"\"\"\n",
         "  Creates a modified version of a dataset where some number of samples are taken, \n",
         "  and the true label is the largest label sampled. When used with MNIST the labels \n",
